# Part2/swagger/spring-server/src/main/java/ch/heigvd/amt/entities/ForeignUserEntity.java
@@ -16,7 +16,7 @@ public class ForeignUserEntity implements Serializable {
     private Long version;
 
     private String applicationUserId;
-    private Long owner;
+    private String apiKey;
     private ArrayList<Long> badgeOwned;
     private HashMap<Long, Integer> pointScaleProgress;
 
@@ -44,12 +44,12 @@ public class ForeignUserEntity implements Serializable {
         this.applicationUserId = applicationUserId;
     }
 
-    public Long getOwner() {
-        return owner;
+    public String getApiKey() {
+        return apiKey;
     }
 
-    public void setOwner(Long owner) {
-        this.owner = owner;
+    public void setApiKey(String apiKey) {
+        this.apiKey = apiKey;
     }
 
     public ArrayList<Long> getBadgeOwned() {
