# Part2/swagger/spring-server/src/main/resources/api-spec.yaml
@@ -261,9 +261,6 @@ definitions:
       id:
         type: integer
         format: int64
-      owner:
-        type: integer
-        format: int64
       if:
         type: object
         properties:
@@ -311,9 +308,6 @@ definitions:
       id:
         type: integer
         format: int64
-      owner:
-        type: integer
-        format: int64
       name:
         type: string
       image:
@@ -329,9 +323,6 @@ definitions:
     type: object
     properties:
       id:
-        type: integer
-        format: int64
-      owner:
         type: integer
         format: int64
       name:
